# cmd

./: Cargo.toml
src/: api.rs  bot_cli.rs  cli.rs  fuzz.rs  lib.rs  main.rs  repl.rs
src/requester/: gamer.rs  local.rs  mod.rs
