[package]
name = "brdgme-cmd"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme-markup = { git = "https://github.com/brdgme/markup.git" }
brdgme-game = { git = "https://github.com/brdgme/game.git" }
brdgme-color = { git = "https://github.com/brdgme/color.git" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
chrono = { version = "0.4.0", features = ["serde"] }
failure = "0.1.1"
term_size = "0.2.3"
